--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
----
+Hello world
+
+<!--
 layout: default
----
 
 <div class="container">
   <div class="card">
@@ -25,3 +26,5 @@ layout: default
     {% endfor %}
   </div>
 </div>
+
+ -->
